Add batching for XMPP notifications.

The invalidation service many send many rapid invalidations for the same team
drive or the users default changelist in succession. We only want to run the
changelist updater once to pick up the latest changes, so rather than just
calling CheckForUpdates() for every invalidation we can batch them together by
waiting for a short period before calling CheckForUpdates.

Also, introduce the opertion queue for these updates that same as we use for
polling updates, as the updates occur in the background and we do not want to
flood the request queue and make the app un-responsive.

Add tests for DriveNotificationManager to cover my recent changes in this area,
as a followup I'll add more test to cover the logic that existed previously.

Bug: 837456
Change-Id: I99bf023178fa364f4f9b17799de9f086b15c05d3
Reviewed-on: https://chromium-review.googlesource.com/1198712
Commit-Queue: Stuart Langley <slangley@chromium.org>
Reviewed-by: Sam McNally <sammc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588720}
Former-commit-id: 80845865e5f2f5a04d1222055275a1a351e68347