components/drive/drive_notification_manager.cc
@@ -4,6 +4,7 @@
 
 #include "components/drive/drive_notification_manager.h"
 
+#include <memory>
 #include <utility>
 
 #include "base/metrics/histogram_macros.h"
@@ -26,6 +27,10 @@ const int kFastPollingIntervalInSecs = 60;
 // polling should be unnecessary if XMPP is enabled, but just in case.
 const int kSlowPollingIntervalInSecs = 300;
 
+// The period to batch together invalidations before passing them to observers.
+constexpr base::TimeDelta kInvalidationBatchInterval =
+    base::TimeDelta::FromSeconds(5);
+
 // The sync invalidation object ID for Google Drive.
 const char kDriveInvalidationObjectId[] = "CHANGELOG";
 
@@ -38,7 +43,8 @@ constexpr size_t kTeamDriveChangePrefixLength =
 }  // namespace
 
 DriveNotificationManager::DriveNotificationManager(
-    invalidation::InvalidationService* invalidation_service)
+    invalidation::InvalidationService* invalidation_service,
+    const base::TickClock* clock)
     : invalidation_service_(invalidation_service),
       push_notification_registered_(false),
       push_notification_enabled_(false),
@@ -47,11 +53,20 @@ DriveNotificationManager::DriveNotificationManager(
   DCHECK(invalidation_service_);
   RegisterDriveNotifications();
   RestartPollingTimer();
+
+  batch_timer_ = std::make_unique<base::RetainingOneShotTimer>(
+      FROM_HERE, kInvalidationBatchInterval,
+      base::BindRepeating(&DriveNotificationManager::OnBatchTimerExpired,
+                          weak_ptr_factory_.GetWeakPtr()),
+      clock);
 }
 
-DriveNotificationManager::~DriveNotificationManager() = default;
+DriveNotificationManager::~DriveNotificationManager() {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
+}
 
 void DriveNotificationManager::Shutdown() {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   // Unregister for Drive notifications.
   if (!invalidation_service_ || !push_notification_registered_)
     return;
@@ -65,6 +80,7 @@ void DriveNotificationManager::Shutdown() {
 
 void DriveNotificationManager::OnInvalidatorStateChange(
     syncer::InvalidatorState state) {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   push_notification_enabled_ = (state == syncer::INVALIDATIONS_ENABLED);
   if (push_notification_enabled_) {
     DVLOG(1) << "XMPP Notifications enabled";
@@ -77,22 +93,18 @@ void DriveNotificationManager::OnInvalidatorStateChange(
 
 void DriveNotificationManager::OnIncomingInvalidation(
     const syncer::ObjectIdInvalidationMap& invalidation_map) {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   DVLOG(2) << "XMPP Drive Notification Received";
   syncer::ObjectIdSet ids = invalidation_map.GetObjectIds();
-
-  // TODO(slangley): Look at batching together notifications, it appears that
-  // we get can get many consecutive invalidations for the same ObjectId due to
-  // how drive stores changes. We should collate a few seconds worth of changes
-  // to filter out duplicates.
-  std::set<std::string> change_ids;
 
   for (const auto& id : ids) {
     if (id.name() == kDriveInvalidationObjectId) {
       // Empty string indicates default change list.
-      change_ids.insert("");
+      invalidated_change_ids_.insert("");
     } else if (base::StartsWith(id.name(), kTeamDriveChangePrefix,
                                 base::CompareCase::SENSITIVE)) {
-      change_ids.insert(id.name().substr(kTeamDriveChangePrefixLength));
+      invalidated_change_ids_.insert(
+          id.name().substr(kTeamDriveChangePrefixLength));
     } else {
       NOTREACHED() << "Unexpected ID " << id.name();
     }
@@ -102,24 +114,34 @@ void DriveNotificationManager::OnIncomingInvalidation(
   // to not bother saving invalidations across restarts for us.
   // See crbug.com/320878.
   invalidation_map.AcknowledgeAll();
-  NotifyObserversToUpdate(NOTIFICATION_XMPP, std::move(change_ids));
+
+  if (!batch_timer_->IsRunning() && !invalidated_change_ids_.empty()) {
+    // Stop the polling timer as we'll be sending a batch soon.
+    polling_timer_.Stop();
+
+    // Restart the timer to send the batch when the timer fires.
+    batch_timer_->Reset();
+  }
 }
 
 std::string DriveNotificationManager::GetOwnerName() const { return "Drive"; }
 
 void DriveNotificationManager::AddObserver(
     DriveNotificationObserver* observer) {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   observers_.AddObserver(observer);
 }
 
 void DriveNotificationManager::RemoveObserver(
     DriveNotificationObserver* observer) {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   observers_.RemoveObserver(observer);
 }
 
 void DriveNotificationManager::UpdateTeamDriveIds(
     const std::set<std::string>& added_team_drive_ids,
     const std::set<std::string>& removed_team_drive_ids) {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   // We only want to update the invalidation service if we actually change the
   // set of team drive id's we're currently registered for.
   bool set_changed = false;
@@ -142,6 +164,7 @@ void DriveNotificationManager::UpdateTeamDriveIds(
 }
 
 void DriveNotificationManager::RestartPollingTimer() {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   const int interval_secs = (push_notification_enabled_ ?
                              kSlowPollingIntervalInSecs :
                              kFastPollingIntervalInSecs);
@@ -156,6 +179,7 @@ void DriveNotificationManager::RestartPollingTimer() {
 void DriveNotificationManager::NotifyObserversToUpdate(
     NotificationSource source,
     const std::set<std::string> ids) {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   DVLOG(1) << "Notifying observers: " << NotificationSourceToString(source);
 
   if (source == NOTIFICATION_XMPP) {
@@ -178,6 +202,7 @@ void DriveNotificationManager::NotifyObserversToUpdate(
 }
 
 void DriveNotificationManager::RegisterDriveNotifications() {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   DCHECK(!push_notification_enabled_);
 
   if (!invalidation_service_)
@@ -192,6 +217,7 @@ void DriveNotificationManager::RegisterDriveNotifications() {
 }
 
 void DriveNotificationManager::UpdateRegisteredDriveNotifications() {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   if (!invalidation_service_)
     return;
 
@@ -209,6 +235,16 @@ void DriveNotificationManager::UpdateRegisteredDriveNotifications() {
   CHECK(invalidation_service_->UpdateRegisteredInvalidationIds(this, ids));
   push_notification_registered_ = true;
   OnInvalidatorStateChange(invalidation_service_->GetInvalidatorState());
+}
+
+void DriveNotificationManager::OnBatchTimerExpired() {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
+
+  std::set<std::string> change_ids_to_update;
+  invalidated_change_ids_.swap(change_ids_to_update);
+  if (!change_ids_to_update.empty()) {
+    NotifyObserversToUpdate(NOTIFICATION_XMPP, change_ids_to_update);
+  }
 }
 
 // static
